# wsianon

./: .gitignore  README.md  justfile  mkdocs.yml  pyproject.toml  setup.py
docs/: DEVELOPMENT.md
include/: aperio-flavor-io.c  console-app.c  hamamatsu-io.c  ini-parser.c  isyntax-io.c  mirax-io.c  philips-tiff-io.c  utils.c  utils.h  ventana-io.c
src/wsianon/: __about__.py  __init__.py  __main__.py  model.py  wsianon.py
src/wsianon/model/: model.py
tests/: test_anonymization.py
