[project]
name = "wsianon"
dynamic = ["version"]
description = "Whole Slide Images anonymization library"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = []
authors = [
  { name = "luciorq", email = "luciorqueiroz@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

scripts = { wsianon = "wsianon:main" }

dependencies = []

[project.optional-dependencies]
docs = [
  "mkdocs-material",
]
tests = [
  "pytest",
  "openslide-python",
  "openslide-bin",
  "tiffslide",
]


[build-system]
requires = [
  "setuptools>=61",
  "setuptools_scm",
  "wheel"
]
build-backend = "setuptools.build_meta"


[project.urls]
Documentation = "https://github.com/luciorq/wsianon#readme"
Issues = "https://github.com/luciorq/wsianon/issues"
Source = "https://github.com/luciorq/wsianon"

# [tool.setuptools]
# py-modules = ["wsianon"]

[tool.setuptools_scm]
version_file = "src/wsianon/__about__.py"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64", "osx-64"]

[tool.pixi.pypi-dependencies]
wsianon = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
tests = { features = ["tests"], solve-group = "default" }

[tool.pixi.tasks]
test = "python -m pytest"

[tool.pixi.dependencies]
python = ">=3.13.5,<3.14"
pip = ">=25.2,<26"
