[project]
name = "wsianon"
dynamic = [ "version" ]
description = "Whole Slide Imaging Anonymization Library"
authors = [
  { name = "luciorq", email = "luciorqueiroz@gmail.com" },
  { name = "EMPAIA" },
]
maintainers = [
  { name = "luciorq", email = "luciorqueiroz@gmail.com" },
]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = [
  "LICENSE.txt",
  "include/LICENSE",
]
keywords = [
  "digital pathology",
  "pathology",
  "whole slide imaging",
  "anonymization",
  "de-identification",
]
classifiers = [
  # "Development Status :: 4 - Beta",A
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  # "Programming Language :: Python :: 3.8",
  # "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  #  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
]

# Follow Spec 0?
# requires-python = ">=3.8"
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
cli = [
  "rich",
  "click",
]
docs = [
  "mkdocs-material",
]
tests = [
  "pytest",
  "openslide-python",
  "openslide-bin",
  "tiffslide",
]

[project.scripts]
wsianon = "wsianon.wsianon:main"

[project.urls]
homepage = "https://github.com/luciorq/wsianon#readme"
source = "https://github.com/luciorq/wsianon"
download = "https://github.com/luciorq/wsianon/releases"
# changelog = "https://github.com/luciorq/wsianon/blob/main/CHANGELOG.md"
# releasenotes = "https://github.com/luciorq/wsianon/releases"
documentation = "https://github.com/luciorq/wsianon#readme"
issues = "https://github.com/luciorq/wsianon/issues"
# funding = ""

# ============== END of project table ========================

[build-system]
requires = [
  "setuptools >= 77.0.3",
  "setuptools_scm",
  "wheel",
]
build-backend = "setuptools.build_meta"

# [tool.setuptools]
# py-modules = ["wsianon"]

[tool.setuptools_scm]
version_file = "src/wsianon/__about__.py"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64", "osx-64"]

[tool.pixi.pypi-dependencies]
wsianon = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
tests = { features = ["tests"], solve-group = "default" }

[tool.pixi.tasks]
test = "python -m pytest"

[tool.pixi.dependencies]
python = ">=3.13.5,<3.14"
pip = ">=25.2,<26"
ruff = ">=0.12.9,<0.13"
